// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DangerBtn /> onClick event works correctly 1`] = `
<button
  className="btn danger"
  onClick={[MockFunction]}
>
  <span
    className="btnContent"
  />
</button>
`;

exports[`<DangerBtn /> renders text correctly 1`] = `
<button
  className="btn danger"
  onClick={null}
>
  <span
    className="btnContent"
  >
    Hello world
  </span>
</button>
`;

exports[`<DangerBtn /> shows loader correctly 1`] = `
<button
  className="btn danger"
  onClick={null}
>
  <div
    className="loader"
  />
</button>
`;
